added webstartArgumentsJVM to Preferences